--- a/src/main/resources/strings_nb_NO.properties
+++ b/src/main/resources/strings_nb_NO.properties
@@ -9,3 +9,8 @@ speak=Snakk
 # Menu Bar
 file=Fil
 exit=Avslutt
+
+# Dialog
+error=Error
+soundPlaybackError=Noe gikk galt ved avspilling av lyden.
+noVoiceSelected=Vennligst spesifisere stemme.
