Add support for word wrap.

--- a/src/main/resources/strings_nb_NO.properties
+++ b/src/main/resources/strings_nb_NO.properties
@@ -8,9 +8,12 @@ speak=Snakk
 
 # Menu Bar
 file=Fil
+
+view=Format
+viewWordWrap=Tekstbryting
+
 exit=Avslutt
 
 # Dialog
 error=Error
 soundPlaybackError=Noe gikk galt ved avspilling av lyden.
-noVoiceSelected=Vennligst spesifisere stemme.
