--- a/src/main/resources/strings_nb_NO.properties
+++ b/src/main/resources/strings_nb_NO.properties
@@ -9,7 +9,7 @@ speak=Snakk
 # Menu Bar
 file=Fil
 open=Åpne...
-save=Lagre...
+save=Lagre Som...
 
 view=Format
 viewWordWrap=Tekstbryting
@@ -19,3 +19,6 @@ exit=Avslutt
 # Dialog
 error=Error
 soundPlaybackError=Noe gikk galt ved avspilling av lyden.
+warning=Advarsel
+overwriteFile=Filen eksisterer allerede! Ønsker du å overskrive den?
+
