Don't show "Save As..." if the file has already been saved once before, show file name in title bar and add support for "New File".

--- a/src/main/resources/strings_nb_NO.properties
+++ b/src/main/resources/strings_nb_NO.properties
@@ -8,8 +8,10 @@ speak=Snakk
 
 # Menu Bar
 file=Fil
+new=Ny
 open=Åpne...
-save=Lagre Som...
+save=Lagre...
+saveAs=Lagre Som...
 
 view=Format
 viewWordWrap=Tekstbryting
