Add error handling for reading files.

--- a/src/main/resources/strings_nb_NO.properties
+++ b/src/main/resources/strings_nb_NO.properties
@@ -23,4 +23,5 @@ error=Error
 soundPlaybackError=Noe gikk galt ved avspilling av lyden.
 warning=Advarsel
 overwriteFile=Filen eksisterer allerede! Ønsker du å overskrive den?
-
+noSuchFile=Den spesifiserte filen eksisterer ikke!
+errorReadingFile=Kunne ikke lese fil. Vennligst påse at det er en tekstfil.
