--- a/src/main/resources/strings_nb_NO.properties
+++ b/src/main/resources/strings_nb_NO.properties
@@ -25,3 +25,4 @@ warning=Advarsel
 overwriteFile=Filen eksisterer allerede! Ønsker du å overskrive den?
 noSuchFile=Den spesifiserte filen eksisterer ikke!
 errorReadingFile=Kunne ikke lese fil. Vennligst påse at det er en tekstfil.
+fileNotSaved=Filen har ikke blitt lagret. Er du sikker på at du vil avslutte?
