Show error message if AWS config has not been set up correctly. Minor refactoring.

--- a/src/main/resources/strings_nb_NO.properties
+++ b/src/main/resources/strings_nb_NO.properties
@@ -26,3 +26,4 @@ overwriteFile=Filen eksisterer allerede! Ønsker du å overskrive den?
 noSuchFile=Den spesifiserte filen eksisterer ikke!
 errorReadingFile=Kunne ikke lese fil. Vennligst påse at det er en tekstfil.
 fileNotSaved=Filen har ikke blitt lagret. Er du sikker på at du vil avslutte?
+awsSdkError=Feil ved tilkobling til AWS. Venligst sjekk at du har konfigurert din IAM bruker og AWS region. Applikasjonen vil nå avslutte.
