Add support for exporting text to audio files.

--- a/src/main/resources/strings_nb_NO.properties
+++ b/src/main/resources/strings_nb_NO.properties
@@ -12,11 +12,16 @@ new=Ny
 open=Åpne...
 save=Lagre...
 saveAs=Lagre Som...
+exportToAudioFile=Eksporter Til Lydfil...
 
 view=Format
 viewWordWrap=Tekstbryting
 
 exit=Avslutt
+
+# Export Dialog
+outputFormat=Filformat:
+export=Eksporter
 
 # Dialog
 error=Error
